# repo-revival-agent

./: .gitignore  BUILD_LOG.md  CLAUDE.md  LICENSE  README.md  WRITEUP_HN.md  WRITEUP_TWITTER.md  pyproject.toml
examples/: sample-report.md
src/repo_revival/: __main__.py  bot_env.py
src/repo_revival/classifier/: __init__.py  classify.py  llm.py  models.py  prompts.py
src/repo_revival/let_rest_issue/: act.py  creator.py  generator.py
src/repo_revival/revive/: bumper.py  codemod.py  fork.py  llm_fixer.py  pr.py  revive.py  tester.py
src/repo_revival/scanner/: __init__.py  analyze.py  dependencies.py  filesystem.py  git.py  github.py  models.py  reporter.py
test-repos/: dataset.yaml
