[project]
name = "repo-revival-agent"
version = "0.1.0"
description = "Autonomous agent that revives dead GitHub repositories — or tells you to let them rest."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Selliksss", email = "277231264+Selliksss@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.96.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "tomli>=2.4.1",
    "typer>=0.24.1",
]

[project.scripts]
repo-revival = "repo_revival.__main__:main"

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "repo_revival"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
